Comment on progress report

--- a/studyprogressreport.Rmd
+++ b/studyprogressreport.Rmd
@@ -26,7 +26,7 @@ Introduction
 ============
 <!-- Why trauma is a big deal --> 
 
-Traumatic injury is one of the leading causes of death worldwide, constituting nearly 8% of global deaths annually [@whoepi]. The global health burden of physical injury has led to trauma being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Nonfatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and health status in survivors of severe trauma [@globalburden; @longtermtrauma].
+Traumatic injury is one of the leading causes of death worldwide, constituting nearly 8% of global deaths annually [@whoepi]. The global health burden of physical injury<!-- I typically define trauma as the clinical entity composed of physical injury and the body's associated response. I would suggest that you stick to trauma and don't use physical injury and trauma interchangeably --> has led to trauma being described as a worldwide pandemic. One of the characteristics of this particular pandemic is its demographic spread; trauma is a leading cause of death for people aged 10-49 years [@globalburden] and 90% of trauma-related deaths occur in low- to middle-income countries [@whoepi]. Nonfatal outcomes also comprise a significant portion of the global health burden of disability [@globalburden], which can drastically reduce quality of life and health status in survivors of severe trauma [@globalburden; @longtermtrauma].
 
 Management of severe trauma is highly time-sensitive and is also dependent on the actions of a multidisciplinary chain of healthcare providers. Errors in management are a common cause of preventable deaths [@prevdeathsghorbani; @prevdeathsmontmany; @prevdeathsteixeira]. Outcomes in severe trauma are dependent on the quality of care received, and it has been shown in the US that trauma quality improvement (QI) programs improve outcomes [@ustqi]. However, it has also been shown that the implementation of QI programs differs widely between clinics [@tqipanglo] and there is still progress to be made.  
 
@@ -39,7 +39,7 @@ The value of M&M conferences in long-term quality improvement is dependent on se
 <!-- Explain the what and why of TSM -->
 
 ## Trauma severity scores
-Trauma severity scores (TSS) are used in trauma quality improvement programs and research for their usefulness in benchmarking and in comparing trauma severity between patients [@whoguidelines]. The existence of these models is necessitated by the heterogeneous nature of trauma, due to the variety in its underlying causes, which affect both the type and severity of the injury. This heterogeneity poses challenges in comparing and evaluating trauma outcomes and has spurred the development of multiple TSS. TSS were initially intended for use in prehospital triage, and therefore were simplistic by design for ease of use [@traumareview], but over the years newer and more advanced models have been developed for quality assurance and research purposes. Today there are hundreds of TSS models. These models differ in their methodology but all have the aim of translating injury severity into quantitative values. However, an inherent weakness of any TSS model is that estimates may be unreliable when applied to a population different from the one the model was developed from. Trauma type and severity will differ between locales and trauma patient populations can be difficult to compare between disparate geographical regions. This weakness is one reason why new models continue to be developed and improved around the globe.  
+Trauma severity scores (TSS)<!-- Avoid non-standard abbreviations, as it makes your text harder to read. For example, I don't think spelling out trauma severity scores is such a big deal, especially considering that you'll be dealing with so many score names that are abbreviations themselves -->  are used in trauma quality improvement programs and research for their usefulness in benchmarking and in comparing trauma severity between patients [@whoguidelines]. The existence of these models is necessitated by the heterogeneous nature of trauma, due to the variety in its underlying causes, which affect both the type and severity of the injury. This heterogeneity poses challenges in comparing and evaluating trauma outcomes and has spurred the development of multiple TSS. TSS were initially intended for use in prehospital triage, and therefore were simplistic by design for ease of use [@traumareview], but over the years newer and more advanced models have been developed for quality assurance and research purposes. Today there are hundreds of TSS models. These models differ in their methodology but all have the aim of translating injury severity into quantitative values. However, an inherent weakness of any TSS model is that estimates may be unreliable when applied to a population different from the one the model was developed from. Trauma type and severity will differ between locales and trauma patient populations can be difficult to compare between disparate geographical regions. This weakness is one reason why new models continue to be developed and improved around the globe.  
 
 The Trauma and Injury Severity Score (TRISS), first developed in the US in 1987 [@triss] and most recently updated in 2010 [@triss2010], is the most commonly used model worldwide. TRISS is a combination index that incorporates patient age, the Injury Severity Score (ISS), the Revised Trauma Score (RTS), and whether the injury was blunt or penetrating [@triss]. The resulting value is a percentage that estimates the probability of survival (Ps). The ISS gives a score based on the three anatomical regions with the most severe injury. A limitation of the ISS is that it cannot take into account situations where one anatomical region has multiple injuries. The RTS is based on the physiological parameters GCS, systolic blood pressure, and respiratory rate. The RTS is difficult to apply in situations where the patient has already been intubated, which gives TRISS limited value in estimating Ps in certain populations. 
 
@@ -47,7 +47,9 @@ In 2014 researchers in Norway released a new model, Norwegian Survival Predictio
 
 ## Trauma severity scores as indicators for peer review
 
-Some clinics already use TSS as audit filters when selecting cases for M&M review [@whoguidelines]. However, the extent to which TSS are associated with or can predict OFI as found in M&M conferences is not well understood. A study at this institution found that neither NORMIT nor TRISS were able to reliably discriminate between preventable and non-preventable deaths [@prevdeathsghorbani]. However, that study included only deaths and not other morbidities and thereby had a low sample size. It is not known whether predictive models have better performance when taking into account the entire population of trauma patients. If it could be found that an existing TSS model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. The aim of this study is to evaluate how trauma severity models are associated with and to what extent they can predict opportunities for improvement.
+Some clinics already use TSS as audit filters when selecting cases for M&M review [@whoguidelines]. However, the extent to which TSS are associated with or can predict OFI as found in M&M conferences is not well understood. A study at this institution<!-- This institution? --> found that neither NORMIT nor TRISS were able to reliably discriminate between preventable and non-preventable deaths [@prevdeathsghorbani]. However, that study included only deaths and not other morbidities and thereby had a low sample size. It is not known whether predictive models have better performance when taking into account the entire population of trauma patients. If it could be found that an existing TSS model is associated with OFI, it could allow for another avenue of automatically identifying potentially mismanaged cases in a standardised fashion. The aim of this study is to evaluate how trauma severity models are associated with and to what extent they can predict opportunities for improvement.
+
+<!-- Note that you mix trauma severity scores, trauma severity models, prediction models, etc. Stick to one of these concepts -->
  
 Methods 
 =======
@@ -56,7 +58,7 @@ Study design
 ------------
 
 <!-- Present key elements of study design -->
-This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry and the trauma care quality database (TCQD). The TCQD is a subset of the trauma registry and contains data on trauma patients who were selected for M&M reviews. These two databases will be linked and then analysed to estimate the association between the common TSS models TRISS and NORMIT and OFI using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
+This is a single-centre retrospective cohort study, using data from two registries at Karolinska University Hospital (KUH): the trauma registry and the trauma care quality database (TCQD)<!-- I would avoid abbreviating these databases as well-->. The TCQD is a subset of the trauma registry and contains data on trauma patients who were selected for M&M reviews. These two databases will be linked and then analysed to estimate the association between the common TSS models TRISS and NORMIT and OFI using logistic regression. The predictive performance of these models will be evaluated using measures of discrimination and calibration. 
 
 Setting
 -------
@@ -73,9 +75,9 @@ The TCQD is an internal hospital register and registers the outcome of M&M confe
 Participants
 ------------
 
-Participants include all patients registered in both the trauma registry and the TCQD at KUH. <!--När du kommit igång med analysen så ska faktiskt nummer in här (yes ska göra det) --> Furthermore, patients <15 years of age will be excluded as paediatric trauma is a seperate clinical entity. 
+Participants include all patients registered in both the trauma registry and the TCQD at KUH. <!--När du kommit igång med analysen så ska faktiskt nummer in här (yes ska göra det) --> <!-- Don't include numbers here,  that's for Results --> Furthermore, patients <15 years of age will be excluded as paediatric trauma is a seperate clinical entity. 
 
-### Selection for the trauma registry
+### Selection<!-- By selection, do you mean eligibility criteria?--> for the trauma registry
 
 The trauma registry includes all patients for whom the trauma team was activated after receiving a potentially traumatic injury, regardless of NISS score, and all patients with a NISS score >15, regardless of whether the trauma team was activated. Also included are patients who were transferred to the hospital within 7 days of injury and have a NISS score >15. Patients where the only traumatic injury is a chronic subdural hematoma and patients for whom the trauma team was activated without an underlying traumatic injury are excluded from the register.
 
@@ -92,7 +94,7 @@ applicable. For each variable of interest, give sources of data and
 details of methods of assessment (measurement). Describe comparability
 of assessment methods if there is more than one group -->
 ### Outcome
-The studied outcome is the binary variable "opportunities for improvement" (OFI), as identified by the multidisciplinary M&M conference at KUH. OFI is coded as either "Yes - at least one opportunity for improvement" or "No - no opportunities for improvement". 
+The studied outcome is the binary variable "opportunities for improvement" (OFI), as identified by the multidisciplinary M&M conference at KUH. OFI is coded as either "Yes - at least one opportunity for improvement identified" or "No - no opportunities for improvement identified". 
 
 ### Exposures
 The primary exposures of interest are trauma severity scores according to the TRISS and NORMIT models. Both of these models estimate the Ps. This is expressed a probability and is a continuous variable. The variables integrated into these models are taken from arrival at hospital. 
@@ -130,9 +132,7 @@ The NORMIT and TRISS scores will be calculated using the following variables fro
 Statistical methods
 -------------------
 
-R, a programming language for statistical computing, will be used for compilation and analysis of data. Conversion and handling of variables will be carried out according to the SweTrau manual. This is a complete case study. In cases where data necessary for analysis is missing, i.e. the variables referred to above, the participant will be excluded from the study. Results will be presented with a confidence interval of 95%. A p-value of <0.05 will be considered significant. 
-
-
+R, a programming language for statistical computing, will be used for compilation and analysis of data. Conversion and handling of variables will be carried out according to the SweTrau manual. This is a complete case study. In cases where data necessary for analysis is missing, i.e. the variables referred to above, the participant will be excluded from the study. Results will be presented with a confidence interval of 95%. A p-value of <0.05 will be considered significant. <!-- The aim includes both to determine association between the severity estimates and OFI as well as how well they predict OFI. These two components require different methods. To determine the strength of the association you could use logistic regression, then the resulting OR would be your effect size. Because all these models returns a probability you don't need to standardise the scores to be able to compare the ORs across models to determine which score that is most strongly associated with OFI. To assess how well they predict OFI you need to calculate the discrimination (often expressed as the area under the receiver operating characteristics curve, or just AUC) and calibration (using for example the integrated calibration index. Note that this is slightly contrived, as that would equate the probability of death with the probability of OFI--> 
 
 Ethical considerations
 ======================
